create_user api doc
